fix active spell overlay, priest offers